# miri-tfm

./: .gitattributes  .gitmodules  Application.cpp  Application.h  AstronomicalPositioning.cpp  AstronomicalPositioning.h  CMakeLists.txt  Camera.cpp  Camera.h  Coordinates.cpp  Coordinates.h  HdrSky.cpp  HdrSky.h  ImGuiNfd.cpp  ImGuiNfd.h  Mesh.cpp  Mesh.h  PhysicalSky.cpp  PhysicalSky.h  Program.cpp  Program.h  README.md  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  ShaderSource.cpp  ShaderSource.h  ShaderStage.cpp  ShaderStage.h  Texture.cpp  Texture.h  Window.cpp  Window.h  demo.cc  demo.h  main.cpp
resources/models/: Floor.glb  FullScreenQuad.glb  Human.glb  Sphere.glb
resources/shaders/: atmosphere.glsl  demo.frag  hdrSky.frag  hdrSky.vert  include.glsl  light.frag  light.vert  mesh.frag  mesh.vert  meshNew.frag  meshNew.vert  meshPhysical.frag  meshPhysical.vert  moon.frag  moon.vert  postprocess.frag  postprocess.vert  sky.frag  sky.vert  skyNew.frag  sun.frag  sun.vert  test.frag  test.glsl  test.vert
resources/textures/: stars_background.hdr  stars_foreground.hdr
